2011-01-29  Carsten Haitzler (The Rasterman)

        1.0.0 release

2011-05-12  Carsten Haitzler (The Rasterman)

	* Make embryo_cc use eina and eina_prefix to determine include location

2011-07-16  Vincent Torri

	* delete temporary files on Windows